Fixed basic layout issue in nav

--- a/src/css/Nav.module.css
+++ b/src/css/Nav.module.css
@@ -3,7 +3,7 @@
   display: flex;
   justify-content: space-between;
   padding: 10px;
-  height: 80px;
+  height: 70px;
 }
 
 .nav > div {
@@ -50,6 +50,7 @@
     position: relative;
   }
   .nav_content {
+    margin-right: 10px;
     width: 50px;
     overflow: hidden;
   }
@@ -65,7 +66,7 @@
   .mobile {
     display: block;
     position: absolute;
-    top: 80px;
+    top: 70px;
     left: 0;
     width: 100%;
     height: 100vh;
